--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-scripts": "^5.0.0",
 		"core-js": "^3.6.5",
-		"sweetalert2": "^11.1.9",
-		"sweetalert2-react-content": "^4.2.0",
-		"web-vitals": "^1.1.2"
+		"sweetalert2-react-content": "^5.0.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
@@ -22,7 +17,7 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build --legacy-peer-deps",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
