--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"core-js": "^3.6.5",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-scripts": "^5.0.0",
-		"core-js": "^3.6.5",
-		"sweetalert2-react-content": "^5.0.0"
+		"sweetalert2-react-content": "^5.0.0",
+		"web-vitals": "^2.1.4"
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
-		"rollup-plugin-babel": "^4.4.0",
 		"chokidar": "^3.5.0",
+		"rollup-plugin-babel": "^4.4.0",
 		"uuid": "^7.0.0"
 	},
 	"scripts": {
